# grassland_production

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: CONTRIBUTING.md  INSTALLATION.md  conf.py  example.ipynb
docs/html/: .buildinfo  CONTRIBUTING.html  INSTALLATION.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/test_data/: concentrate_feed.csv  spared_area.csv  spared_area_breakdown.csv  stocking_rate.csv  total_grassland_area.csv
src/database/: grassland_management_database.db
src/geo_grassland_production/: catchment_grassland.py  fertilisation.py  geo_fertilisation.py  geo_grass_yield.py  geo_grassland_output.py  geo_grassland_soils.py  geo_spared_area.py
src/grassland_production/: data_loader.py  database_manager.py  dry_matter.py  farm_data_generation.py  fertilisation.py  grass_yield.py  grassland.py  grassland_area.py  grassland_data_manager.py  grassland_output.py  grassland_soils.py  spared_area.py  stocking_rate.py  utilisation_rate.py
src/resource_manager/: data_loader.py  database_manager.py  grassland_data_manager.py
src/tests/: areas_test.py  (+11 more)
tests/: area_validation_test.py  areas_test.py  data_test.py  dm_test.py  example.py  farm_data_test.py  fertilization_test.py  geo_area_validation_test.py  geo_example.py  geo_farm_data_generation.py  geo_fertilisation_test.py  geo_grassland_area_test.py  grassland_outputs_test.py  grassland_soils_test.py  output_test.py  resource_manager_test.py  spared_area_test.py  stocking_rate_test.py  utilisation_test.py  yield_test.py
(+178 files in other folders)
