[tool.poetry]
name = "grassland_production"
version = "0.3.2"
description = "Computation of grassland area and production based on animal energy calculations and grassland inputs"
authors = ["Colm Duffy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.1.4"
numpy = "^1.25.0"
sqlalchemy = "<2.0"
cattle_lca = {git = "https://github.com/colmduff/cattle_lca.git", branch = "main"}
sheep_lca = {git = "https://github.com/colmduff/sheep_lca.git", branch = "main"}
catchment_data_api = {git = "https://github.com/colmduff/catchment_data_api.git", branch = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"